--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -6,6 +6,7 @@
 
 
     <RelativeLayout
+        android:background="@color/color_White"
         android:id="@+id/video_view_group"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
