--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -29,33 +29,30 @@
     </RelativeLayout>
     <View
         android:id="@+id/darkBackground"
-        android:background="#383838"
+        android:background="#c8404040"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         />
 
 
     <ImageView
-        android:layout_above="@id/darkBackground"
+        android:layout_marginTop="320dp"
         android:id="@+id/video_otherimg"
-        android:layout_marginTop="170dp"
         android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         />
     <TextView
-        android:layout_above="@id/darkBackground"
         android:text="asdsdasdsadsadsd"
         android:textColor="@color/color_White"
         android:textSize="16sp"
         android:id="@+id/video_otherName"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="370dp"
         android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         />
     <TextView
-        android:layout_above="@id/darkBackground"
         android:text="영상통화 왔습니다..."
         android:textColor="@color/color_White"
         android:textSize="20sp"
