--- a/app/src/main/res/layout/char_room_item.xml
+++ b/app/src/main/res/layout/char_room_item.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="80dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="8dp">
 
     <ImageView
         android:id="@+id/chat_room_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         app:srcCompat="@drawable/album"
         tools:ignore="VectorDrawableCompat" />
 
@@ -27,7 +27,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_marginLeft="8dp"
+                android:layout_marginLeft="12dp"
                 android:id="@+id/chatroom_click"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -76,6 +76,7 @@
         </LinearLayout>
 
         <View
+            android:layout_marginLeft="20dp"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/color_Lite_Gray" />
